--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   chat-title="Natalia"
   agent-id="65a5b0c5-b64e-4ad9-b261-860cb719db2f"
   language-code="en"
+  intent="WELCOME"
 ></df-messenger>
 
     <script src="natalia.js"></script>
